2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-background-properties/preferences.c
	(preferences_read_xml): Fix typo in adjust-opacity part

	* capplets/new-background-properties/main.c (do_set_xml): Apply
	preferences as well as saving them

2001-01-24  jacob berkman  <jacob@ximian.com>

	* new-control-center/*.[ch]: new (temporary) html view and bug
	fixication
	
	* root-manager/*.[ch]: gnomeify dialogs and other cleanups

	* configure.in: flags for root-manager-helper

2001-01-17  jacob berkman  <jacob@ximian.com>

	* root-manager/Makefile.am
	* root-manager/root-manager.h: fix finding the root-manager

2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Added ROLLBACK_CAPPLET_{CFLAGS|LIBS} for the
	rollback capplet
	(ROLLBACK_CAPPLET_LIBS): Typo fix
	(AC_OUTPUT): Added capplets/rollback/Makefile

2000-12-29  Kjartan Maraas  <kmaraas@gnome.org>

	* capplets/new-background-properties/background-properties.glade:
	Fix typo.
	
2000-12-26  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* root-manager/root-manager.c: tool based on usermode /
	consolehelper to launch setup tools with root privaleges

	* capplets/new-ui-properties/ui-properties.glade: merged the 3
	capplets into one

	* capplets/new-background-properties/background-properties.glade:
	re-did the UI a bit.  The code doesn't yet work correctly.

	* configure.in: add checks for libcapplet and fixup directories

	* Makefile.am: remove libcapplet and add root-manager

2000-12-22  Bradford Hovinen  <hovinen@helixcode.com>

	* capplets/new-background-properties/applier.c
	(renderer_render_wallpaper): Prescale the pixbuf before a tiled
	composite

2000-12-21  Bradford Hovinen  <hovinen@helixcode.com>

	* capplets/new-background-properties/applier.c (set_root_pixmap):
	Check if nitems is 1, not 4
	(set_root_pixmap): Do a sanity check on the old pixmap before
	freeing it

2000-12-18  Bradford Hovinen  <hovinen@helixcode.com>

	* capplets/new-background-properties/applier.c