@@ -1,3 +1,11 @@
+2001-01-25  jacob berkman  <jacob@ximian.com>
+
+	* root-manager/root-manager.c (main): add a \n to the usage
+	message
+
+	* root-manager/root-manager-wrap.c: change some g_print's to
+	fprintf to stderr
+
 2001-01-24  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplets/new-background-properties/preferences.c
